@@ -26,8 +26,9 @@
  *
  */
 
-
-
+/**
+ * Portions Copyrighted 2012 ForgeRock Inc
+ */
 package com.sun.identity.authentication.modules.httpbasic;
 
 import com.iplanet.am.util.Cache;
@@ -53,10 +54,10 @@ import javax.security.auth.callback.PasswordCallback;
 import java.io.IOException;
 import com.iplanet.sso.SSOToken;
 import com.sun.identity.security.AdminTokenAction;
+import com.sun.identity.shared.encode.Base64;
 import java.security.AccessController;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import sun.misc.BASE64Decoder;
 
 /**
  * HTTP Basic login module.
@@ -194,8 +195,7 @@ public class HTTPBasic extends AMLoginModule {
             null, null);
         }
         String userPwdEncoded = auth.substring(6);  // removes 'BASIC '
-        BASE64Decoder decoder = new BASE64Decoder();
-        String decode = new String(decoder.decodeBuffer(userPwdEncoded));
+        String decode = new String(Base64.decode(userPwdEncoded));
         int idx = decode.indexOf(':');
         if (idx != -1) {
             userPassword = decode.substring(idx+1);
